Implementação dos metodos solicitados, ajustes e tradução das mensagens de retorno

--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -1,11 +1,11 @@
-state.validation.notnull=O estado deve ser informado.
-state.validation.length=O estado deve ter entre {min} e {max} caracteres.
-name.validation.notnull=O nome da cidade deve ser informado.
-name.validation.length=O nome da cidade deve ter entre {min} e {max} caracteres.
-nameClient.validation.length=O nome do cliente deve ter entre {min} e {max} caracteres.
-nameClient.validation.notnull=O nome do cliente deve ser informado.
-sex.validation.length=O sexo do cliente deve ter entre {min} e {max} caracteres.
-sex.validation.notnull=O sexo do cliente deve ser informado.
-birthday.validato.formato=A data de nascimento deve seguir o formato DD/MM/YYYY
-age.validation.notnull=A idade do cliente deve ser informada.
-age.validation.digits=Informe uma idade válida.
+state.validation.notnull=The state must be entered.
+state.validation.length=The state must be between {min} and {max} characters.
+name.validation.notnull=The city name must be entered.
+name.validation.length=City name must be between {min} and {max} characters.
+nameClient.validation.length=Client name must be between {min} and {max} characters.
+nameClient.validation.notnull=Client name must be entered.
+gender.validation.length=Client gender must be between {min} and {max} characters.
+gender.validation.notnull=The gender of the client must be informed.
+birthday.validation.format=Date of birth must follow the format DD / MM / YYYY
+age.validation.digits=Enter a valid age.
+id.validation.notnull=You must enter the city ID.
